--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <title>my first webpage</title>
 </head>
   <body>
-    <h1>welcome to my space
-      <p>this is not something to read rather it is for practice
+    <h1>welcome to my space</h1>
+      <p>this is not something to read rather it is for practice.
       </p>
       </body>
     </html>
