--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
   <body>
     <h1>welcome to my space</h1>
-      <p>this is not something to read rather it is for practice.
+    <p>this is not<I> something</I> to read rather<B> it is for practice</B>
       </p>
       </body>
     </html>
