--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 <div id="container">
-  <button class="yes"  onclick="window.location.href = 'categories.html';">movies and categories  </button>
+  <button class="yes"  onclick="window.location.href = 'categories.html';">movie's and categories  </button>
 </div>
           
   
